# autograder

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  container-tests-config.yaml  deploy.sh  pyproject.toml
.github/workflows/: test.yml
autograder/: main.py  utils.py
infra/: deployment.yaml  service.yaml
tests/: test_lab1.py  test_main.py
